--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "paypal-rest-sdk": "^1.8.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "stripe": "^8.7.0"
   }
 }
